Fix some layout issues   * Selectmenu height   * Display planet name in popup list

--- a/app/css/layerManager.css
+++ b/app/css/layerManager.css
@@ -8,7 +8,7 @@
 
 #backgroundLayersSelect-menu
 {
-	height: 200px;
+	max-height: 200px;
 }
 
 #backgroundLayers fieldset
